graph method added

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@
 /UnsupervisedGraphs
 /zeromev_20000000.parquet
 address_unsupervised_scores_all.csv
+address_risk.csv
+edge_anomalies.csv
+blte_features.txt
+BLTEGrabber.py
+blockchain_supervised.py
